# EPI-EMMAX

./: .gitignore  Makefile  Makefile.am  Makefile.intel  README.md  build.sh  configure.ac  emmax-kin.c  emmax-predict.cc  emmax.c  epi-emmax.c  kmacros.h
